fix section overflow

--- a/css/destinations.css
+++ b/css/destinations.css
@@ -16,7 +16,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 60px;
 }
 
 .hero-destination--hawaii {
@@ -37,7 +36,7 @@ body {
 
 .hero-destination__top {
   display: flex;
-  padding: 2.5rem 0 0 4.375rem;
+  padding: 120px 0 0 4.375rem;
 }
 .hero-destination__header {
   font-family: Verdana Bold;
